fix: touch up environment variable and setup script to make it work

--- a/.env.template
+++ b/.env.template
@@ -4,14 +4,14 @@
 # =============================================================================
 # DIRECTORY PATHS
 # =============================================================================
-DATA_DIR= # Directory containing PDF files
-CACHE_DIR= # Directory for cleaned text files
-PROCESSED_DIR= # Directory for processed documents
-INDEX_DIR= # Directory for FAISS and BM25 indexes
-QUERY_DIR= # Directory for query processing results
-RESPONSE_DIR= # Directory for final responses
-EVAL_DATASET_PATH= # Path to evaluation dataset JSON file (Task 7)
-RESULTS_DIR= # Directory for evaluation results (Task 7)
+DATA_DIR=/home/work/RAG-example/data/sample # Directory containing PDF files
+CACHE_DIR=/home/work/RAG-example/cleaned # Directory for cleaned text files
+PROCESSED_DIR=/home/work/RAG-example/processed # Directory for processed documents
+INDEX_DIR=/home/work/RAG-example/indexes # Directory for FAISS and BM25 indexes
+QUERY_DIR=/home/work/RAG-example/query_results # Directory for query processing results
+RESPONSE_DIR=/home/work/RAG-example/responses # Directory for final responses
+EVAL_DATASET_PATH=/home/work/tasks/task7_evaluation/sample/evaluation_dataset.json # Path to evaluation dataset JSON file (Task 7)
+RESULTS_DIR=/home/work/tasks/task7_evaluation/eval_results # Directory for evaluation results (Task 7)
 
 # =============================================================================
 # MODEL ENDPOINTS AND AUTHENTICATION
@@ -33,8 +33,8 @@ EMBED_MODEL= # embedding model name from hugging face (e.g. nlpai-lab/KURE-v1)
 # =============================================================================
 # DOCUMENT PROCESSING (Task 2)
 # =============================================================================
-CHUNK_SIZE=180                     # Text chunk size for splitting
-CHUNK_OVERLAP=80                   # Overlap between consecutive chunks
+CHUNK_SIZE=300                     # Text chunk size for splitting
+CHUNK_OVERLAP=60                   # Overlap between consecutive chunks
 
 # =============================================================================
 # RETRIEVAL CONFIGURATION (Task 4)
